# HMR

./: .gitignore  install.sh  readme.md
cxx/correction/: CMakeLists.txt  correction.pro
cxx/correction/src/: arguments.cpp  arguments.h  bam_correction.cpp  bam_correction.h  hp_fasta_parser.cpp  hp_fasta_parser.h  hp_fasta_types.h  hp_str_utils.h  main.cpp
cxx/filter/: CMakeLists.txt  filter.pro
cxx/filter/src/: arguments.cpp  arguments.h  bam_filter.cpp  bam_filter.h  compose_reduced.cpp  compose_reduced.h  enzyme.cpp  enzyme.h  hp_fasta_search.cpp  hp_fasta_search.h  hp_fasta_types.h  main.cpp
cxx/graph/: CMakeLists.txt  graph.pro
cxx/graph/src/: arguments.cpp  arguments.h  main.cpp
cxx/libs/: hp_bam_parser.cpp  hp_bam_parser.h  hp_bam_types.h  hp_bgzf_parser.cpp  hp_bgzf_parser.h  hp_bgzf_queue.cpp  hp_bgzf_queue.h  hp_bgzf_types.h  hp_file_map.cpp  hp_file_map.h  hp_thread_pool.h  hp_unzip.cpp  hp_unzip.h  hp_zip.cpp  hp_zip.h  hp_zip_crc32.cpp  hp_zip_crc32.h  ui_utils.cpp  ui_utils.h
deploy/: deploy.py
py/: bootstrap.py  correct.py  external_tools.py  filter.py  hmr  partition.py  ui_utils.py
shells/: hmr
